# incremental-scene-graph-prediction

./: .gitignore  LICENSE  README.md  getting_started.ipynb  pyproject.toml  requirements.txt
artifacts/: split_test.json  split_train.json  split_validate.json  weights.json
hierarchical/: 00d42bed-778d-2ac6-86a7-0e0e5f5f5660.graph.json  02b33df9-be2b-2d54-9062-1253be3ce186.graph.json  02b33dfb-be2b-2d54-92d2-cd012b2b3c40.graph.json  02b33dfd-be2b-2d54-91d2-55454852009e.graph.json  02b33e01-be2b-2d54-93fb-4145a709cec5.graph.json  02b33e03-be2b-2d54-9129-5d28efdd68fa.graph.json  05c6ede7-2e69-23b1-8b27-c1cb868f1938.graph.json  095821f7-e2c2-2de1-9568-b9ce59920e29.graph.json  095821f9-e2c2-2de1-9707-8f735cd1c148.graph.json  095821fb-e2c2-2de1-94df-20f2cb423bcb.graph.json  09582205-e2c2-2de1-9475-1cdac7639e60.graph.json  09582207-e2c2-2de1-972c-225d968c2ab4.graph.json  09582209-e2c2-2de1-9610-08baed932919.graph.json  0958220b-e2c2-2de1-96bc-739f09c1e8f8.graph.json  0958220d-e2c2-2de1-9710-c37018da1883.graph.json  09582212-e2c2-2de1-9700-fa44b14fbded.graph.json  09582214-e2c2-2de1-956a-64d8da4ba7cc.graph.json  09582216-e2c2-2de1-97de-efcab1ef9c43.graph.json  09582219-e2c2-2de1-9534-519142703037.graph.json  0958221b-e2c2-2de1-96b1-6233099811a0.graph.json  09582223-e2c2-2de1-94b6-750684b4f80a.graph.json  09582225-e2c2-2de1-9564-f6681ef5e511.graph.json  09582228-e2c2-2de1-953d-f6f1ee4b3699.graph.json  0958222a-e2c2-2de1-9474-35e601b3682a.graph.json  0958222d-e2c2-2de1-9732-e2fb990692ef.graph.json  0958222f-e2c2-2de1-94fd-986561908cee.graph.json  (+1355 more)
ssg_tools/: __init__.py  (+1 more)
(+77 files in other folders)
